# cpack-exercise-wt2526

./: CMakeLists.txt
cmake/: CPackConfig.cmake
